--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><img src="img/logo6.jpg"></a>
+		<a class="navbar-brand" href="#"><img src="img/logo6.jpg" importance = "high"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -56,7 +56,7 @@
 	</ul>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img class="image" src="img/background.png">
+			<img class="image" src="img/background.png" importance = "high">
 			<div class="carousel-caption">
 				<h1 class="display-2">Website</h1>
 				<h3>Complete Website Layout</h3>
