--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><img src="img/logo_hbo.png" importance = "high"></a>
+		<a class="navbar-brand" href="#"><img src="img/hbo.png" importance = "high"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -265,7 +265,7 @@
 		<div class="row text-center">
 			<div class="col-md-4 pt-0">
 				<div class="footer-image">
-				<img src="img/logo6.jpg"></div>
+				<img src="img/hbo.png"></div>
 				<hr class="light">
 				<p>555-555-5555</p>
 				<p>email@hhemail.com</p>
