--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	</ul>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img class="image" src="img/background.png" importance = "low" >
+			<img class="image" importance = "low" src="img/background.png"  >
 			<div class="carousel-caption">
 				<h1 class="display-2">Website</h1>
 				<h3>Complete Website Layout</h3>
@@ -66,10 +66,10 @@
 			</div>
 		</div>
 		<div class="carousel-item">
-			<img class="image" src="img/background2.png">
+			<img class="image"  importance = "high" src="img/background2.png">
 		</div>
 		<div class="carousel-item">
-			<img class="image" src="img/background3.png">
+			<img class="image" importance = "high" src="img/background3.png">
 		</div>
 	</div>
 </div>
