--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 	<div class="row padding">
 		<div class="col-md-4">
 			<div class="card">
-				<img class="card-img-top" src="img/team1.png">
+				<img class="card-img-top" importance = "high" src="img/team1.png">
 				<div class="card-body">
 					<h4 class="card-title">John Doe</h4>
 					<p class="card-text">John is an Interent
@@ -191,7 +191,7 @@
 		</div>
 		<div class="col-md-4">
 			<div class="card">
-				<img class="card-img-top" src="img/team2.png">
+				<img class="card-img-top" importance = "high" src="img/team2.png">
 				<div class="card-body">
 					<h4 class="card-title">Mary Jo</h4>
 					<p class="card-text">Mary is a designer with a almost 10 years
