--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 		<div class="row text-center">
 			<div class="col-md-4 pt-0">
 				<div class="footer-image">
-				<img src="img/hbo.png"></div>
+				<img src="img/logo6.jpg"></div>
 				<hr class="light">
 				<p>555-555-5555</p>
 				<p>email@hhemail.com</p>
