--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			</div>
 		</div>
 		<div class="carousel-item">
-			<img class="image"  importance = "high" src="img/background2.png">
+			<img class="image" rel = "reload" src="img/background2.png">
 		</div>
 		<div class="carousel-item">
 			<img class="image" importance = "high" src="img/background3.png">
