--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><img src="img/logo6.jpg" importance = "high"></a>
+		<a class="navbar-brand" href="#"><img src="img/logo6.jpg" importance = "low"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -66,10 +66,10 @@
 			</div>
 		</div>
 		<div class="carousel-item">
-			<img class="image" rel = "reload" src="img/background2.png">
+			<img class="image" src="img/background2.png">
 		</div>
 		<div class="carousel-item">
-			<img class="image" importance = "high" src="img/background3.png">
+			<img class="image" importance = "low" src="img/background3.png">
 		</div>
 	</div>
 </div>
