--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<title>Complete Website Layout</title>
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" importance = "low"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" importance = "low"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" importance = "low"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" ></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" ></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" ></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<link href="style.css" rel="stylesheet">
@@ -18,7 +18,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><img src="img/logo6.jpg" importance = "low"></a>
+		<a class="navbar-brand" href="#"><img src="img/logo6.jpg" ></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -56,7 +56,7 @@
 	</ul>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img class="image" importance = "low" src="img/background.png"  >
+			<img class="image" src="img/background.png"  >
 			<div class="carousel-caption">
 				<h1 class="display-2">Website</h1>
 				<h3>Complete Website Layout</h3>
@@ -66,10 +66,10 @@
 			</div>
 		</div>
 		<div class="carousel-item">
-			<img class="image" importance = "high" src="img/background2.png">
+			<img class="image"  src="img/background2.png">
 		</div>
 		<div class="carousel-item">
-			<img class="image" importance = "low" src="img/background3.png">
+			<img class="image" src="img/background3.png">
 		</div>
 	</div>
 </div>
@@ -179,7 +179,7 @@
 	<div class="row padding">
 		<div class="col-md-4">
 			<div class="card">
-				<img class="card-img-top" rel = "preload" importance = "high" src="img/team1.png">
+				<img class="card-img-top" src="img/team1.png">
 				<div class="card-body">
 					<h4 class="card-title">John Doe</h4>
 					<p class="card-text">John is an Interent
@@ -191,7 +191,7 @@
 		</div>
 		<div class="col-md-4">
 			<div class="card">
-				<img class="card-img-top" importance = "high" src="img/team2.png">
+				<img class="card-img-top" src="img/team2.png">
 				<div class="card-body">
 					<h4 class="card-title">Mary Jo</h4>
 					<p class="card-text">Mary is a designer with a almost 10 years
