--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 			</div>
 		</div>
 		<div class="carousel-item">
-			<img class="image" importance = "low" src="img/background2.png">
+			<img class="image" importance = "high" src="img/background2.png">
 		</div>
 		<div class="carousel-item">
-			<img class="image" importance = "low" src="img/background3.png">
+			<img class="image" importance = "high" src="img/background3.png">
 		</div>
 	</div>
 </div>
