--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 	</div>
 </footer>
 
-<script src="https://unpkg.com/aos@next/dist/aos.js" importance = "low"></script>
+<script importance = "low" src="https://unpkg.com/aos@next/dist/aos.js" ></script>
 <script>
 AOS.init();
 </script>
